add dbsnp to server endpoints
